# dyachenko_cv

./: .gitignore  README.md
part_1/: README.md  pyproject.toml
part_1/src/module_a/cloud_sampling_basic/: README.md
part_1/src/module_a/cloud_sampling_methods/: config.yaml  sampling_methods.py
part_1/src/module_a/region_filters/: config.yaml  region_filters.py
part_1/src/module_b/: .gitignore
part_1/src/module_b/color_maps/: .gitignore  README.md  color_maps.py
part_1/src/module_b/scalar_fields_adv/: README.md
part_1/src/module_c/semantic3d_notes/: README.md  augment_ops.py  helpers.py  semantic3d.py  settings.yaml
part_1/src/module_d/: pointnet_model.py  pointnet_visuals.py  smoke.py
part_1/src/module_e/: .gitignore  README.md  config.yaml  data_loader.py  dataset_stats.py
part_2/: .gitignore  README.md  REPORT.md
part_2/data/: valve_0001_lidar_classes.ply  valve_0002_lidar_classes.ply  valve_0003_lidar_classes.ply  valve_0004_lidar_classes.ply  valve_0005_lidar_classes.ply  valve_0006_lidar_classes.ply  valve_0007_lidar_classes.ply  valve_0008_lidar_classes.ply  valve_0009_lidar_classes.ply  valve_0010_lidar_classes.ply  valve_0011_lidar_classes.ply  valve_0012_lidar_classes.ply  valve_0013_lidar_classes.ply  valve_0014_lidar_classes.ply  valve_0015_lidar_classes.ply  valve_0016_lidar_classes.ply  valve_0017_lidar_classes.ply  valve_0018_lidar_classes.ply  valve_0019_lidar_classes.ply  valve_0020_lidar_classes.ply  valve_0021_lidar_classes.ply  valve_0022_lidar_classes.ply  valve_0023_lidar_classes.ply  valve_0024_lidar_classes.ply  (+476 more)
(+72 files in other folders)
